[package]
name = "moxie-router"
version = "0.1.0"
description = "Main routing program for Moxie DEX"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "moxie_router"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0"
pyth-sdk-solana = "0.9.0"
bytemuck = "1.14.0"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1.0"

[dev-dependencies]
anchor-client = "0.29.0"
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
tokio = { version = "1", features = ["full"] }
